# NovelView

./: .dockerignore  .gitignore  .prettierrc  .prettierrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  capacitor.config.ts  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sync-rules.yaml  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vercel.json  vite.config.js  vite.config.ts
app/: ssr.tsx
app/routes/: __root.tsx  index.tsx
core/: .env.template  .gitattributes  .prettierignore  README.md  eslint.config.js  index.html  infrastructure.md  package.json  postcss.config.cjs  tsconfig.json  vite.config.ts
core/docs/: infrastructure.md
core/placeholder/: route.tsx
core/src/: routeTree.gen.ts
core/src-tauri/: Cargo.toml  tauri.conf.json
core/src-tauri/src/: main.rs
core/src-tauri/src/commands/: migrations.rs  mod.rs
docs/: UPDATES  sync-rules.yaml
native/: .env.template  .gitignore  ATTRIBUTION.md  README.md  TODO.md  convosave.txt  package.json  vite.config.ts
native/src/: routeTree.gen.ts
native/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
old/ui/: auth_form.tsx  auth_form_input.tsx  labeled_check_box.tsx  title_bar.tsx  title_bar_button.tsx  title_bar_button_container.tsx
placeholder/_reader/: route.tsx
public/: index.html
src/: App.tsx  global.css  routeTree.gen.ts  vite-env.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  schema.sql
src/app/: app.tsx  (+2 more)
web/: README.md  package.json  pnpm-lock.yaml
(+659 files in other folders)
