[package]
name = "NovelView"
version = "0.1.0"
description = "A cross-platform reader for your .epub, .awz, .pdf, etc.. formats."
authors = ["Filip Ryan"]
license = "MIT"
repository = "git+https://github.com/raincuhh/NovelView.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.6", features = [] }
tauri-plugin-log = "2.0.0-rc"
dotenv = "0.15"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
rusqlite = "0.32.1"
