[package]
name = "NovelView"
version = "0.1.0"
description = "Novelview is a ebook reader"
repository = "git+https://github.com/raincuhh/NovelView.git"
authors = ["you"]
edition = "2021"

[lib]
name = "novelview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
epub = "2.1.2"
tauri-plugin-os = "2"
